src/test/deca/context/invalid/resultats/test_instanceof_invalid_rightoperand-cont.res
./src/test/deca/context/invalid/test_instanceof_invalid_rightoperand.deca:27:17: The right operand is not of type class 
